<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

   <FrameLayout
                android:id="@+id/frame_top"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"              
                >              

                <Button
                    android:id="@+id/imgview_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="Cancel"
                    android:textColor="@android:color/black"
                    android:layout_gravity="right|center_vertical|center_horizontal"
                    android:layout_marginRight="20dip"
                     />
            </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"      
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Organizedby"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />

           
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Date"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />

            
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Time"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Duration"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Location"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/CalAddress"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Country"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Dialin"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/OnlineMeeting"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/Contact"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/text_pop_fields"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/ContactNumber"
                android:textColor="@color/community_text1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/community_seperator" />
    </LinearLayout>

</LinearLayout>